# GaiaExceptions

./: CMakeLists.txt  ExceptionBase.cpp  ExceptionBase.hpp  NullPointerException.hpp  README.md
GaiaExceptions/: AssertFailure.hpp  CMakeLists.txt  ExceptionBase.cpp  ExceptionBase.hpp  ExceptionWrapper.hpp  GaiaExceptions.hpp  GaiaExceptionsConfig.cmake  HardwareFailure.hpp  NetworkFailure.hpp  NullPointerException.cpp  NullPointerException.hpp  PackageConfig.cmake.in  Utility.cpp  Utility.hpp
UnitTest/: CMakeLists.txt  ExceptionWrapperTest.cpp
